HtmlUi: Fixed alignment of table header state and menubar
Necessary due to header size change of previous commit

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
@@ -68,12 +68,12 @@
         padding-bottom: @desktop-table-header-padding-y;
 
         & > .table-header-item-state {
-          top: 10px;
+          top: 9px;
         }
       }
 
       & > .menubar > .menu-item {
-        padding-top: 10px;
+        padding-top: 9px;
         padding-bottom: 10px;
         margin-right: 7px;
       }
